--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,7 +1,7 @@
 ﻿<div class="col-md-6 offset-md-3 mt-5">
     <div class="alert alert-info">
-        Username: test<br />
-        Password: test
+        Username: test / <br />
+        Password: test / 
     </div>
     <div class="card">
         <h4 class="card-header">Angular 9 Basic Authentication Example</h4>
